[metadata]
name = tebless
author = Michel Betancourt
author_email = MichelBetancourt23@gmail.com
description-file = README.md
license-file = LICENSE
summary = This library is a collection of widgets that supported from blessed
url = https://github.com/Akhail/Tebless
download_url = https://github.com/Akhail/Tebless/tarball/1.0
requires-python = >=3
license = MIT
install_requires = [blessed =  = 1.14.2]
dependency_links = git+https://github.com/Akhail/events.git
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console :: Curses
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3 :: Only
keywords = 
    cli
    python
    widgets

[files]
packages =
    tebless

[build_sphinx]
builders = html
source-dir = doc/source
build-dir = doc/build
all-files = 1